--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,73 +31,6 @@ jobs:
         case-name: [defaults]
         numpy-requirement: [">=1.20,<1.21"]
         coverage-requirement: ["==6.5"]
-        # Extra special cases.  In these, the new variable defined should always
-        # be a truth-y value (hence 'nomkl: 1' rather than 'mkl: 0'), because
-        # the lack of a variable is _always_ false-y, and the defaults lack all
-        # the special cases.
-        include:
-          # Mac
-          # Mac has issues with MKL since september 2022.
-          - case-name: macos
-            os: macos-latest
-            python-version: "3.10"
-            condaforge: 1
-            nomkl: 1
-
-          # Scipy 1.5
-          - case-name: old SciPy
-            os: ubuntu-latest
-            python-version: "3.8"
-            numpy-requirement: ">=1.20,<1.21"
-            scipy-requirement: ">=1.5,<1.6"
-            condaforge: 1
-            oldcython: 1
-
-          # No MKL runs.  MKL is now the default for conda installations, but
-          # not necessarily for pip.
-          - case-name: no MKL
-            os: ubuntu-latest
-            python-version: "3.9"
-            numpy-requirement: ">=1.20,<1.21"
-            nomkl: 1
-
-          # Builds without Cython at runtime.  This is a core feature;
-          # everything should be able to run this.
-          - case-name: no Cython
-            os: ubuntu-latest
-            python-version: "3.8"
-            nocython: 1
-
-          # Python 3.10 and numpy 1.22
-          # Use conda-forge to provide numpy 1.22
-          - case-name: Python 3.10
-            os: ubuntu-latest
-            python-version: "3.10"
-            condaforge: 1
-            oldcython: 1
-
-          # Python 3.11 and latest numpy
-          # Use conda-forge to provide Python 3.11 and latest numpy
-          # Ignore deprecation of the cgi module in Python 3.11 that is
-          # still imported by Cython.Tempita. This was addressed in
-          # https://github.com/cython/cython/pull/5128 but not backported
-          # to any currently released version.
-          - case-name: Python 3.11
-            os: ubuntu-latest
-            python-version: "3.11"
-            condaforge: 1
-            conda-extra-pkgs: "suitesparse"  # for compiling cvxopt
-            pytest-extra-options: "-W ignore::DeprecationWarning:Cython.Tempita"
-
-          # Windows. Once all tests pass without special options needed, this
-          # can be moved to the main os list in the test matrix. All the tests
-          # that fail currently seem to do so because mcsolve uses
-          # multiprocessing under the hood. Windows does not support fork()
-          # well, which makes transfering objects to the child processes
-          # error prone. See, e.g., https://github.com/qutip/qutip/issues/1202
-          - case-name: Windows Latest
-            os: windows-latest
-            python-version: "3.10"
 
     steps:
       - uses: actions/checkout@v3
@@ -164,7 +97,7 @@ jobs:
             # truly being executed.
             export QUTIP_NUM_PROCESSES=2
           fi
-          pytest -Werror --strict-config --strict-markers --fail-slow=300 --durations=0 --durations-min=1.0 --verbosity=1 --cov=qutip --cov-report= --color=yes ${{ matrix.pytest-extra-options }} qutip/tests
+          pytest -Werror --strict-config --strict-markers --fail-slow=300 --durations=0 --durations-min=1.0 --verbosity=1 --cov=qutip --cov-report= --color=yes ${{ matrix.pytest-extra-options }} -k core qutip/tests
           # Above flags are:
           #  -Werror
           #     treat warnings as errors
@@ -195,30 +128,6 @@ jobs:
           COVERALLS_FLAG_NAME: ${{ matrix.os }}-${{ matrix.python-version }}-${{ matrix.case-name }}
           COVERALLS_PARALLEL: true
         run: coveralls --service=github
-
-  towncrier-check:
-    name: Verify Towncrier entry added
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Install Towncrier
-        run: |
-          python -m pip install towncrier
-
-      - name: Verify Towncrier entry added
-        if: github.event_name == 'pull_request'
-        env:
-          BASE_BRANCH: ${{ github.base_ref }}
-        run: |
-          # Fetch the pull request' base branch so towncrier will be able to
-          # compare the current branch with the base branch.
-          # Source: https://github.com/actions/checkout/#fetch-all-branches.
-          git fetch --no-tags origin +refs/heads/${BASE_BRANCH}:refs/remotes/origin/${BASE_BRANCH}
-          towncrier check --compare-with origin/${BASE_BRANCH}
-          towncrier build --version "$(cat VERSION)" --draft
 
   finalise:
     name: Finalise coverage reporting
