--- a/setup.cfg
+++ b/setup.cfg
@@ -31,12 +31,12 @@ packages = find:
 include_package_data = True
 zip_safe = False
 install_requires =
-    numpy>=1.16.6
-    scipy>=1.0
+    numpy>=1.22,<1.26
+    scipy>=1.8,<1.12
     packaging
 setup_requires =
-    numpy>=1.13.3
-    scipy>=1.0
+    numpy>=1.22
+    scipy>=1.8
     cython>=0.29.20; python_version>='3.10'
     cython>=0.29.20,<3.0.3; python_version<='3.9'
     packaging
