--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,34 +27,45 @@ jobs:
         os: [ubuntu-latest]
         # Test other versions of Python in special cases to avoid exploding the
         # matrix size; make sure to test all supported versions in some form.
-        python-version: ["3.9"]
+        python-version: ["3.11"]
         case-name: [defaults]
-        numpy-requirement: [">=1.20,<1.21"]
+        numpy-requirement: [">=1.22,<1.27"]
+        scipy-requirement: [">=1.8,<1.12"]
         coverage-requirement: ["==6.5"]
         # Extra special cases.  In these, the new variable defined should always
         # be a truth-y value (hence 'nomkl: 1' rather than 'mkl: 0'), because
         # the lack of a variable is _always_ false-y, and the defaults lack all
         # the special cases.
         include:
-          # Python 3.10, Scipy 1.8, numpy 1.23
-          # Oldest version we have to support according to SPEC 0
+          # Python 3.9, Scipy 1.7, numpy 1.22
+          # On more version than suggested by SPEC 0
           # https://scientific-python.org/specs/spec-0000/
           - case-name: Old setup
             os: ubuntu-latest
-            python-version: "3.10"
-            numpy-requirement: ">=1.23,<1.24"
+            python-version: "3.9"
+            numpy-requirement: ">=1.22,<1.23"
             scipy-requirement: ">=1.8,<1.9"
             condaforge: 1
             oldcython: 1
             pytest-extra-options: "-W ignore:dep_util:DeprecationWarning"
 
-          # Python 3.10, no mkl, no cython
+          # Python 3.10, no cython, oldist dependencies
+          - case-name: Python 3.10, no cython
+            os: ubuntu-latest
+            python-version: "3.10"
+            scipy-requirement: ">=1.9,<1.10"
+            numpy-requirement: ">=1.23,<1.24"
+            condaforge: 1
+            nocython: 1
+
+          # Python 3.10, no mkl
           - case-name: Python 3.10, no mkl
             os: ubuntu-latest
             python-version: "3.10"
+            scipy-requirement: ">=1.10,<1.11"
+            numpy-requirement: ">=1.24,<1.25"
             condaforge: 1
             nomkl: 1
-            nocython: 1
 
           # Mac
           # Mac has issues with MKL since september 2022.
@@ -74,7 +85,7 @@ jobs:
             os: windows-latest
             python-version: "3.11"
 
-          # Python 3.11 and latest numpy
+          # Python 3.11 and recent numpy
           # Use conda-forge to provide Python 3.11 and latest numpy
           # Ignore deprecation of the cgi module in Python 3.11 that is
           # still imported by Cython.Tempita. This was addressed in
@@ -84,8 +95,10 @@ jobs:
             os: ubuntu-latest
             python-version: "3.11"
             condaforge: 1
+            numpy-requirement: ">=1.25,<1.26"
+            scipy-requirement: ">=1.11,<1.12"
             conda-extra-pkgs: "suitesparse"  # for compiling cvxopt
-            pytest-extra-options: "-W ignore::DeprecationWarning:Cython.Tempita"
+            # pytest-extra-options: "-W ignore::DeprecationWarning:Cython.Tempita"
 
           # Python 3.12 and latest numpy
           # Use conda-forge to provide Python 3.11 and latest numpy
