--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,7 +50,7 @@ jobs:
             pytest-extra-options: "-W ignore:dep_util:DeprecationWarning"
 
           # Python 3.10, no cython, oldist dependencies
-          - case-name: Python 3.10, no cython
+          - case-name: no cython
             os: ubuntu-latest
             python-version: "3.10"
             scipy-requirement: ">=1.9,<1.10"
@@ -59,7 +59,7 @@ jobs:
             nocython: 1
 
           # Python 3.10, no mkl
-          - case-name: Python 3.10, no mkl
+          - case-name: no mkl
             os: ubuntu-latest
             python-version: "3.10"
             scipy-requirement: ">=1.10,<1.11"
@@ -98,7 +98,6 @@ jobs:
             numpy-requirement: ">=1.25,<1.26"
             scipy-requirement: ">=1.11,<1.12"
             conda-extra-pkgs: "suitesparse"  # for compiling cvxopt
-            # pytest-extra-options: "-W ignore::DeprecationWarning:Cython.Tempita"
 
           # Python 3.12 and latest numpy
           # Use conda-forge to provide Python 3.11 and latest numpy
@@ -106,6 +105,7 @@ jobs:
             os: ubuntu-latest
             python-version: "3.12"
             condaforge: 1
+            pytest-extra-options: "-W ignore:datetime:DeprecationWarning"
 
 
     steps:
