--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,8 +29,8 @@ jobs:
         # matrix size; make sure to test all supported versions in some form.
         python-version: ["3.11"]
         case-name: [defaults]
-        numpy-requirement: [">=1.22,<1.27"]
-        scipy-requirement: [">=1.8,<1.12"]
+        numpy-requirement: [">=1.22"]
+        scipy-requirement: [">=1.8"]
         coverage-requirement: ["==6.5"]
         # Extra special cases.  In these, the new variable defined should always
         # be a truth-y value (hence 'nomkl: 1' rather than 'mkl: 0'), because
@@ -40,6 +40,7 @@ jobs:
           # Python 3.9, Scipy 1.7, numpy 1.22
           # On more version than suggested by SPEC 0
           # https://scientific-python.org/specs/spec-0000/
+          # There are deprecation warnings when using cython 0.29.X
           - case-name: Old setup
             os: ubuntu-latest
             python-version: "3.9"
@@ -70,6 +71,30 @@ jobs:
             numpy-requirement: ">=1.24,<1.25"
             nocython: 1
 
+          # Python 3.11 and recent numpy
+          # Use conda-forge to provide Python 3.11 and latest numpy
+          # Ignore deprecation of the cgi module in Python 3.11 that is
+          # still imported by Cython.Tempita. This was addressed in
+          # https://github.com/cython/cython/pull/5128 but not backported
+          # to any currently released version.
+          - case-name: Python 3.11
+            os: ubuntu-latest
+            python-version: "3.11"
+            condaforge: 1
+            scipy-requirement: ">=1.11,<1.12"
+            numpy-requirement: ">=1.25,<1.26"
+            conda-extra-pkgs: "suitesparse"  # for compiling cvxopt
+
+          # Python 3.12 and latest numpy
+          # Use conda-forge to provide Python 3.11 and latest numpy
+          - case-name: Python 3.12
+            os: ubuntu-latest
+            python-version: "3.12"
+            scipy-requirement: ">=1.12,<1.13"
+            numpy-requirement: ">=1.26,<1.27"
+            condaforge: 1
+            pytest-extra-options: "-W ignore:datetime:DeprecationWarning"
+
           # Mac
           # Mac has issues with MKL since september 2022.
           - case-name: macos
@@ -87,29 +112,6 @@ jobs:
           - case-name: Windows
             os: windows-latest
             python-version: "3.11"
-
-          # Python 3.11 and recent numpy
-          # Use conda-forge to provide Python 3.11 and latest numpy
-          # Ignore deprecation of the cgi module in Python 3.11 that is
-          # still imported by Cython.Tempita. This was addressed in
-          # https://github.com/cython/cython/pull/5128 but not backported
-          # to any currently released version.
-          - case-name: Python 3.11
-            os: ubuntu-latest
-            python-version: "3.11"
-            condaforge: 1
-            numpy-requirement: ">=1.25,<1.26"
-            scipy-requirement: ">=1.11,<1.12"
-            conda-extra-pkgs: "suitesparse"  # for compiling cvxopt
-
-          # Python 3.12 and latest numpy
-          # Use conda-forge to provide Python 3.11 and latest numpy
-          - case-name: Python 3.12
-            os: ubuntu-latest
-            python-version: "3.12"
-            condaforge: 1
-            pytest-extra-options: "-W ignore:datetime:DeprecationWarning"
-
 
     steps:
       - uses: actions/checkout@v3
