--- a/setup.cfg
+++ b/setup.cfg
@@ -34,12 +34,14 @@ install_requires =
     numpy>=1.22
     scipy>=1.8,<1.12
     packaging
+    typing_extensions
 setup_requires =
     numpy>=1.19
     scipy>=1.8
     cython>=0.29.20; python_version>='3.10'
     cython>=0.29.20,<3.0.3; python_version<='3.9'
     packaging
+    typing_extensions
 
 [options.packages.find]
 include = qutip*
