--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ include_package_data = True
 zip_safe = False
 install_requires =
     numpy>=1.22
-    scipy>=1.8,<1.12
+    scipy>=1.8
     packaging
 setup_requires =
     numpy>=1.19
