--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ project_urls =
     Documentation = https://qutip.org/docs/latest/
     Source Code = https://github.com/qutip/qutip
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 5 - Production/Stable
     Intended Audience :: Science/Research
     License :: OSI Approved :: BSD License
     Programming Language :: Python
