--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ license = BSD 3-Clause License
 license_files = LICENSE.txt
 project_urls =
     Bug Tracker = https://github.com/qutip/qutip/issues
-    Documentation = https://qutip.org/docs/latest/
+    Documentation = https://qutip.readthedocs.io/en/stable/
     Source Code = https://github.com/qutip/qutip
 classifiers =
     Development Status :: 2 - Pre-Alpha
