Update readme note for v5 and setuptools requirement

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ runtime_compilation =
     cython>=0.29.20; python_version>='3.10'
     cython>=0.29.20,<3.0.3; python_version<='3.9'
     filelock
+    setuptools
 semidefinite =
     cvxpy>=1.0
     cvxopt
