--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ include_package_data = True
 zip_safe = False
 install_requires =
     numpy>=1.16.6
-    scipy>=1.0
+    scipy>=1.0,<1.13.0
     packaging
 setup_requires =
     numpy>=1.13.3
