--- a/setup.cfg
+++ b/setup.cfg
@@ -30,15 +30,16 @@ platforms = Linux, Mac OSX, Unix, Windows
 packages = find:
 include_package_data = True
 zip_safe = False
+python_requires = >=3.9
 install_requires =
-    numpy>=1.22
+    numpy>=1.22,<2.0.0
     scipy>=1.8
     packaging
 setup_requires =
-    numpy>=1.19
+    numpy>=1.19,<2.0.0
     scipy>=1.8
     cython>=0.29.20; python_version>='3.10'
-    cython>=0.29.20,<3.0.3; python_version<='3.9'
+    cython>=0.29.20,<3.0.0; python_version<='3.9'
     packaging
 
 [options.packages.find]
@@ -48,7 +49,7 @@ include = qutip*
 graphics = matplotlib>=1.2.1
 runtime_compilation =
     cython>=0.29.20; python_version>='3.10'
-    cython>=0.29.20,<3.0.3; python_version<='3.9'
+    cython>=0.29.20,<3.0.0; python_version<='3.9'
     filelock
     setuptools
 semidefinite =
