--- a/.github/workflows/build_documentation.yml
+++ b/.github/workflows/build_documentation.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           # Build without build isolation so that we use the build
           # dependencies already installed from doc/requirements.txt.
-          python -m pip install -e .[full] --no-build-isolation
+          python -m pip install -e .[full] --no-build-isolation --config-settings editable_mode=compat
           # Install in editable mode so it doesn't matter if we import from
           # inside the installation directory, otherwise we can get some errors
           # because we're importing from the wrong location.
