--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,9 @@ setup_requires =
 include = qutip*
 
 [options.extras_require]
-graphics = matplotlib>=1.2.1
+graphics =
+    matplotlib>=1.2.1; python_version>='3.10'
+    matplotlib>=1.2.1,<3.9.0; python_version<='3.9'
 runtime_compilation =
     cython>=0.29.20; python_version>='3.10'
     cython>=0.29.20,<3.0.0; python_version<='3.9'
