--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,6 +48,7 @@ jobs:
             numpy-requirement: ">=1.22,<1.23"
             condaforge: 1
             oldcython: 1
+            oldmpl: 1   # Matplotlib 3.9 is not imported properly with python 3.9
             pytest-extra-options: "-W ignore:dep_util:DeprecationWarning"
 
           # Python 3.10, no mkl, scipy 1.9, numpy 1.23
@@ -137,7 +138,11 @@ jobs:
         run: |
           # Install the extra requirement
           python -m pip install pytest>=5.2 pytest-rerunfailures  # tests
-          python -m pip install matplotlib>=1.2.1  # graphics
+          if [[ "${{ matrix.oldmpl }}" ]]; then
+            python -m pip install "matplotlib>=1.2.1,<3.9.0"  # graphics
+          else
+            python -m pip install matplotlib>=1.2.1  # graphics
+          fi
           python -m pip install cvxpy>=1.0 cvxopt  # semidefinite
           python -m pip install ipython  # ipython
           python -m pip install loky tqdm  # extras
