--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,31 +29,35 @@ jobs:
         # matrix size; make sure to test all supported versions in some form.
         python-version: ["3.11"]
         case-name: [defaults]
-        numpy-requirement: [">=1.22"]
-        scipy-requirement: [">=1.8"]
+        numpy-build: [""]  # On conda, the prerelease is tagged as 2.0
+        numpy-requirement: [""]
+        scipy-requirement: [">=1.9"]
         coverage-requirement: ["==6.5"]
+        # pypi: 1  # numpy 2 not yet available on conda
         # Extra special cases.  In these, the new variable defined should always
         # be a truth-y value (hence 'nomkl: 1' rather than 'mkl: 0'), because
         # the lack of a variable is _always_ false-y, and the defaults lack all
         # the special cases.
         include:
           # Test with the version 2 of numpy comming soon.
-          - case-name: numpy2
+          - case-name: python 3.12
             os: ubuntu-latest
             python-version: "3.12"
-            scipy-requirement: ""
-            numpy-requirement: "==2.0.0rc2"
+            numpy-build: ">=2.0.0rc2"
             pypi: 1
 
           # Binaries compiled with numpy 2 should be compatible when using
           # numpy 1.X at runtime.
-          - case-name: numpy2_to_1
+          - case-name: build numpy 1.22
             os: ubuntu-latest
             python-version: "3.10"
             scipy-requirement: ""
-            numpy-requirement: "==2.0.0rc2"
-            roll_back_numpy: 1
-            pypi: 1  # numpy 2 not yet available on conda
+            numpy-requirement: ">=1.22.0,<1.23.0"
+            numpy-build: ">=1.22.0,<1.23.0"
+            semidefinite: 1
+            oldcython: 1
+            pypi: 1
+            pytest-extra-options: "-W ignore:dep_util:DeprecationWarning -W \"ignore:The 'renderer' parameter of do_3d_projection\""
 
           # Python 3.10, no mkl, scipy 1.9, numpy 1.23
           # Scipy 1.9 did not support cython 3.0 yet.
@@ -63,33 +67,11 @@ jobs:
             python-version: "3.10"
             scipy-requirement: ">=1.9,<1.10"
             numpy-requirement: ">=1.23,<1.24"
+            semidefinite: 1
             condaforge: 1
             oldcython: 1
             nomkl: 1
-            pytest-extra-options: "-W ignore:dep_util:DeprecationWarning"
-
-          # Python 3.10, no cython, scipy 1.10, numpy 1.24
-          - case-name: no cython
-            os: ubuntu-latest
-            python-version: "3.10"
-            scipy-requirement: ">=1.10,<1.11"
-            numpy-requirement: ">=1.24,<1.25"
-            oldcython: 1
-            nocython: 1
-
-          # Python 3.11 and recent numpy
-          # Use conda-forge to provide Python 3.11 and latest numpy
-          # Ignore deprecation of the cgi module in Python 3.11 that is
-          # still imported by Cython.Tempita. This was addressed in
-          # https://github.com/cython/cython/pull/5128 but not backported
-          # to any currently released version.
-          - case-name: Python 3.11
-            os: ubuntu-latest
-            python-version: "3.11"
-            condaforge: 1
-            scipy-requirement: ">=1.11,<1.12"
-            numpy-requirement: ">=1.25,<1.26"
-            conda-extra-pkgs: "suitesparse"  # for compiling cvxopt
+            pytest-extra-options: "-W ignore:dep_util:DeprecationWarning -W \"ignore:The 'renderer' parameter of do_3d_projection\""
 
           # Python 3.12 and latest numpy
           # Use conda-forge to provide Python 3.11 and latest numpy
@@ -99,7 +81,6 @@ jobs:
             scipy-requirement: ">=1.12,<1.13"
             numpy-requirement: ">=1.26,<1.27"
             condaforge: 1
-            pytest-extra-options: "-W ignore:datetime:DeprecationWarning"
             # Install mpi4py to test mpi_pmap
             # Should be enough to include this in one of the runs
             includempi: 1
@@ -110,19 +91,32 @@ jobs:
             # setup-miniconda not compatible with macos-latest presently.
             # https://github.com/conda-incubator/setup-miniconda/issues/344
             os: macos-12
-            python-version: "3.11"
+            python-version: "3.12"
             condaforge: 1
             nomkl: 1
 
-          # Windows. Once all tests pass without special options needed, this
-          # can be moved to the main os list in the test matrix. All the tests
-          # that fail currently seem to do so because mcsolve uses
-          # multiprocessing under the hood. Windows does not support fork()
-          # well, which makes transfering objects to the child processes
-          # error prone. See, e.g., https://github.com/qutip/qutip/issues/1202
+          - case-name: macos - numpy 1.25
+            os: macos-12
+            python-version: "3.11"
+            scipy-requirement: ">=1.11,<1.12"
+            numpy-requirement: ">=1.25,<1.26"
+            # conda-extra-pkgs: "suitesparse"  # for compiling cvxopt
+            condaforge: 1
+            nomkl: 1
+
           - case-name: Windows
             os: windows-latest
             python-version: "3.11"
+
+          - case-name: Windows - No cython
+            os: windows-latest
+            python-version: "3.10"
+            scipy-requirement: ">=1.10,<1.11"
+            numpy-requirement: ">=1.24,<1.25"
+            semidefinite: 1
+            oldcython: 1
+            nocython: 1
+            pytest-extra-options: "-W ignore:dep_util:DeprecationWarning -W \"ignore:The 'renderer' parameter of do_3d_projection\""
 
     steps:
       - uses: actions/checkout@v4
@@ -140,25 +134,29 @@ jobs:
         # version of cython, scipy, numpy in the test matrix, not a temporary
         # version use in the installation virtual environment.
         run: |
+          conda config --add channels conda-forge/label/numpy_rc
           # Install the extra requirement
           python -m pip install pytest>=5.2 pytest-rerunfailures  # tests
           python -m pip install matplotlib>=1.2.1  # graphics
-          python -m pip install cvxpy>=1.0 cvxopt  # semidefinite
           python -m pip install ipython  # ipython
           python -m pip install loky tqdm  # extras
           python -m pip install "coverage${{ matrix.coverage-requirement }}" chardet
           python -m pip install pytest-cov coveralls pytest-fail-slow
 
           if [[ "${{ matrix.pypi }}" ]]; then
-            pip install "numpy${{ matrix.numpy-requirement }}" "scipy${{ matrix.scipy-requirement }}"
+            pip install "numpy${{ matrix.numpy-build }}"
+            pip install "scipy${{ matrix.scipy-requirement }}"
           elif [[ -z "${{ matrix.nomkl }}" ]]; then
-            conda install blas=*=mkl "numpy${{ matrix.numpy-requirement }}" "scipy${{ matrix.scipy-requirement }}"
+            conda install blas=*=mkl "numpy${{ matrix.numpy-build }}" "scipy${{ matrix.scipy-requirement }}"
           elif [[ "${{ matrix.os }}" =~ ^windows.*$ ]]; then
             # Conda doesn't supply forced nomkl builds on Windows, so we rely on
             # pip not automatically linking to MKL.
-            pip install "numpy${{ matrix.numpy-requirement }}" "scipy${{ matrix.scipy-requirement }}"
+            pip install "numpy${{ matrix.numpy-build }}" "scipy${{ matrix.scipy-requirement }}"
           else
-            conda install nomkl "numpy${{ matrix.numpy-requirement }}" "scipy${{ matrix.scipy-requirement }}"
+            conda install nomkl "numpy${{ matrix.numpy-build }}" "scipy${{ matrix.scipy-requirement }}"
+          fi
+          if [[ -n "${{ matrix.semidefinite }}" ]]; then
+            python -m pip install cvxpy>=1.0 cvxopt
           fi
           if [[ -n "${{ matrix.conda-extra-pkgs }}" ]]; then
             conda install "${{ matrix.conda-extra-pkgs }}"
@@ -168,7 +166,7 @@ jobs:
             conda install "openmpi<5" mpi4py
           fi
           if [[ "${{ matrix.oldcython }}" ]]; then
-            python -m pip install cython==0.29.36 filelock
+            python -m pip install cython==0.29.36 filelock matplotlib==3.5
           else
             python -m pip install cython filelock
           fi
@@ -179,11 +177,15 @@ jobs:
             python -m pip uninstall cython -y
           fi
 
-          if [[ "${{ matrix.roll_back_numpy }}" ]]; then
-            # Binary compiled with numpy 2.X should be compatible with numpy 1.X
-            python -m pip install "numpy<1.24"
+          if [[ "${{ matrix.pypi }}" ]]; then
+            python -m pip install "numpy${{ matrix.numpy-requirement }}" --pre
+          elif [[ -z "${{ matrix.nomkl }}" ]]; then
+            conda install "numpy${{ matrix.numpy-requirement }}"
+          elif [[ "${{ matrix.os }}" =~ ^windows.*$ ]]; then
+            python -m pip install "numpy${{ matrix.numpy-requirement }}" --pre
+          else
+            conda install nomkl "numpy${{ matrix.numpy-requirement }}"
           fi
-
 
 
       - name: Package information
