--- a/setup.cfg
+++ b/setup.cfg
@@ -32,24 +32,22 @@ include_package_data = True
 zip_safe = False
 python_requires = >=3.10
 install_requires =
-    numpy>=1.22,<2.0.0
-    scipy>=1.8
+    numpy>=1.22
+    scipy>=1.9
     packaging
 setup_requires =
-    numpy>=1.19,<2.0.0
-    scipy>=1.8
+    numpy>=2.0.0rc2
+    scipy>=1.9
     cython>=0.29.20; python_version>='3.10'
-    cython>=0.29.20,<3.0.0; python_version<='3.9'
     packaging
 
 [options.packages.find]
 include = qutip*
 
 [options.extras_require]
-graphics = matplotlib>=1.2.1
+graphics = matplotlib>=3.5
 runtime_compilation =
     cython>=0.29.20; python_version>='3.10'
-    cython>=0.29.20,<3.0.0; python_version<='3.9'
     filelock
     setuptools
 semidefinite =
